# frameretrace

./: README.md  meson.build
src/: glframe_filter.hpp  glframe_gettime_win.cpp  glframe_logger.cpp  glframe_logger.hpp  glframe_metrics.cpp  glframe_metrics_amd.cpp  glframe_metrics_intel.cpp  glframe_metrics_intel.hpp  glframe_metrics_mdapi.cpp  glframe_metrics_mdapi.hpp  glframe_retrace.cpp  glframe_retrace.hpp  glframe_retrace_context.cpp  glframe_retrace_context.hpp  glframe_retrace_interface.hpp  glframe_retrace_render.cpp  glframe_retrace_render.hpp  glframe_retrace_skeleton.cpp  glframe_retrace_skeleton.hpp  glframe_retrace_stub.cpp  glframe_retrace_texture.cpp  glframe_state.cpp  glframe_state.hpp  glframe_state_enums.cpp  glframe_stderr.cpp  glframe_utils.cpp  glframe_utils.hpp  glretrace_globals.cpp  meson.build  playback.proto
src/amd_gpa/: meson.build
src/bargraph/: glframe_bargraph.cpp  meson.build
src/bargraph/test/: meson.build  test_bargraph_ctx.hpp
src/bargraph/ui/: meson.build
src/context/: glframe_thread_context.cpp  glframe_thread_context.hpp  meson.build
src/framemetrics/: collect_all.sh  glframe_runner.cpp  glframe_runner.hpp  glframe_threadedparser.cpp  glframe_threadedparser.hpp  main.cpp  meson.build  metrics.cpp  metrics.hpp  metrics_amd.cpp  metrics_intel.cpp
src/framestat/: glframe_loop.cpp  glframe_loop.hpp  main.cpp  meson.build
src/gldispatch/: glframe_glhelper.cpp  glframe_glhelper.hpp  meson.build
src/server/: meson.build
src/test/: meson.build  retrace_daemon_test.cpp  retrace_file_transfer_test.cpp  retrace_metrics_test.cpp
src/ui/: glframe_api_model.cpp  glframe_api_model.hpp  glframe_metrics_model.cpp  glframe_metrics_model.hpp  glframe_qutil.cpp  glframe_retrace_model.cpp  glframe_retrace_model.hpp  glframe_shader_model.cpp  glframe_state_model.cpp  glframe_texture_model.cpp  main.cpp  meson.build
src/ui/qml/: ApiControl.qml  ShaderControl.qml  mainwin.qml
subprojects/: .gitignore  apitrace.wrap  brotli  build_apitrace.py  crc32c  google-snappy.wrap  khronos  md5  mdapi.wrap  protobuf.wrap  snappy  waffle.wrap
