frameretrace_ui_inc = include_directories('.')
frameretrace_ui_dep = declare_dependency(include_directories : frameretrace_inc)

frameretrace_moc = qt5.preprocess(moc_headers : ['glframe_api_model.hpp',
                                                 'glframe_batch_model.hpp',
                                                 'glframe_experiment_model.hpp',
                                                 'glframe_metrics_model.hpp',
                                                 'glframe_qutil.hpp',
                                                 'glframe_rendertarget_model.hpp',
                                                 'glframe_retrace_images.hpp',
                                                 'glframe_retrace_model.hpp',
                                                 'glframe_shader_model.hpp',
                                                 'glframe_state_model.hpp',
                                                 'glframe_texture_model.hpp',
                                                 'glframe_uniform_model.hpp',
                                                ],
                              dependencies: qt5_dep)

frameretrace_qrc = qt5.preprocess(qresources : 'resources.qrc')

frameretrace_exe = executable('frameretrace',
                              [frameretrace_moc,
                               frameretrace_qrc,
                               'glframe_api_model.cpp',
                               'glframe_api_model.hpp',
                               'glframe_batch_model.cpp',
                               'glframe_batch_model.hpp',
                               'glframe_experiment_model.cpp',
                               'glframe_experiment_model.hpp',
                               'glframe_metrics_model.cpp',
                               'glframe_metrics_model.hpp',
                               'glframe_qutil.cpp',
                               'glframe_qutil.hpp',
                               'glframe_rendertarget_model.cpp',
                               'glframe_rendertarget_model.hpp',
                               'glframe_retrace_images.cpp',
                               'glframe_retrace_images.hpp',
                               'glframe_retrace_model.cpp',
                               'glframe_retrace_model.hpp',
                               'glframe_shader_model.cpp',
                               'glframe_shader_model.hpp',
                               'glframe_state_model.cpp',
                               'glframe_state_model.hpp',
                               'glframe_texture_model.cpp',
                               'glframe_texture_model.hpp',
                               'glframe_uniform_model.cpp',
                               'glframe_uniform_model.hpp',
                               'main.cpp'],
                              dependencies : [bargraph_dep, frameretrace_dep, apitrace_dep,
                                              qt5_dep],
                              include_directories : rendering_inc,
                              cpp_args : '-DFRAMERETRACE_BUILD_DIR="' + server_dir + '"')
